--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "module": "",
   "scripts": {
+    "start:dev": "nodemon ./server/src/index.ts",
     "format": "npx prettier --write ."
   },
   "repository": {
@@ -20,13 +21,15 @@
   "homepage": "https://github.com/Krukovich/graphQL_service#readme",
   "dependencies": {
     "apollo-server": "^3.9.0",
-    "graphql": "^16.5.0",
     "cross-env": "^7.0.3",
+    "graphql": "^16.5.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
+    "@types/node-fetch": "^2.6.2",
     "prettier": "2.7.1"
   }
 }
