--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
-    "prettier": "2.7.1"
+    "@types/uuid": "^8.3.4",
+    "prettier": "2.7.1",
+    "uuid": "^8.3.2"
   }
 }
