--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^8.3.4",
+    "dotenv": "^16.0.1",
     "prettier": "2.7.1"
   }
 }
