--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "node-fetch": "^2.6.1",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "graphql-depth-limit": "^1.1.0"
   },
   "devDependencies": {
+    "@types/graphql-depth-limit": "^1.1.3",
     "@types/node-fetch": "^2.6.2",
     "@types/uuid": "^8.3.4",
     "dotenv": "^16.0.1",
